<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:orientation="vertical"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent">
       <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" 
          android:gravity="center">
          <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" 
             android:text="@string/pin">
          </TextView>
          <EditText 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" 
             android:id="@+id/pin_edit_value"
             android:hint="pin number">
          </EditText>
       </LinearLayout>
       <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" 
          android:gravity="center">
          <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" 
             android:text="@string/value">
          </TextView>
          <EditText 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" 
             android:id="@+id/edit_value"
             android:hint="@string/hint">
          </EditText>
       </LinearLayout>
       <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal" 
          android:gravity="center">
          <Button 
             android:id="@+id/button_direction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/direction">
          </Button>
          <Button 
             android:id="@+id/button_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/value">
          </Button>
          <Button 
             android:id="@+id/button_export"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/export">
          </Button>
          <Button 
             android:id="@+id/button_unexport"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/unexport">
          </Button>
       </LinearLayout>
    </LinearLayout>
